- sender OOM example